--- a/IPlugExamples/IPlugEffect/IPlugEffect-aax.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/IPlugEffect-aax.vcxproj.filters
@@ -112,7 +112,7 @@
       <Filter>IPlug\AAX</Filter>
     </ClInclude>
     <ClInclude Include="IPlugEffect.h" />
-    <ClInclude Include="resource.h" />
+    <ClInclude Include="config.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IPlugEffect.rc" />
