--- a/IPlugExamples/IPlugEffect/IPlugEffect-app.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/IPlugEffect-app.vcxproj.filters
@@ -1,80 +1,205 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="app">
+    <Filter Include="IPlug">
+      <UniqueIdentifier>{a4ab3f7f-8e64-4faa-9ef8-6729bf90970e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="APP">
       <UniqueIdentifier>{6a6c24bd-7110-4436-97af-07990da17abf}</UniqueIdentifier>
     </Filter>
-    <Filter Include="app\RtAudioMidi">
+    <Filter Include="APP\RtAudioMidi">
       <UniqueIdentifier>{ef87c677-1479-44bc-aef8-7ba960ef233d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="app\ASIO_SDK">
+    <Filter Include="APP\ASIO_SDK">
       <UniqueIdentifier>{b91b9db4-5584-4959-a395-7394ba3cf5a3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IPlug\IGraphics">
+      <UniqueIdentifier>{3e51802a-4345-4466-980c-8e52e14d4ac1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\IPlug\rtaudiomidi\RtAudio.h">
-      <Filter>app\RtAudioMidi</Filter>
+      <Filter>APP\RtAudioMidi</Filter>
     </ClInclude>
     <ClInclude Include="..\..\IPlug\rtaudiomidi\RtError.h">
-      <Filter>app\RtAudioMidi</Filter>
+      <Filter>APP\RtAudioMidi</Filter>
     </ClInclude>
     <ClInclude Include="..\..\IPlug\rtaudiomidi\RtMidi.h">
-      <Filter>app\RtAudioMidi</Filter>
+      <Filter>APP\RtAudioMidi</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\asiosys.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\ginclude.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\iasiodrv.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\asio.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\asiodrivers.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ASIO_SDK\asiolist.h">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClInclude>
     <ClInclude Include="app_wrapper\app_main.h">
-      <Filter>app</Filter>
+      <Filter>APP</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h" />
     <ClInclude Include="IPlugEffect.h" />
-    <ClInclude Include="..\..\IPlug\IPlugStandalone.h">
-      <Filter>app</Filter>
+    <ClInclude Include="config.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="..\..\IPlug\Hosts.h">
+      <Filter>IPlug</Filter>
     </ClInclude>
-    <ClInclude Include="app_wrapper\app_resource.h" />
+    <ClInclude Include="..\..\IPlug\IMidiQueue.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IParam.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlug_include_in_plug_hdr.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlug_include_in_plug_src.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugBase.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugByteChunk.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugConstants.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugOSDetect.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugStructs.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugUtilities.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\Log.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\NChanDelay.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugStandalone.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IAutoGUI.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControls.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLice.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsUtilites.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsWin.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IKeyboardControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPopupMenu.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\IPlug\rtaudiomidi\RtAudio.cpp">
-      <Filter>app\RtAudioMidi</Filter>
+      <Filter>APP\RtAudioMidi</Filter>
     </ClCompile>
     <ClCompile Include="..\..\IPlug\rtaudiomidi\RtMidi.cpp">
-      <Filter>app\RtAudioMidi</Filter>
+      <Filter>APP\RtAudioMidi</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ASIO_SDK\asio.cpp">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ASIO_SDK\asiodrivers.cpp">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ASIO_SDK\asiolist.cpp">
-      <Filter>app\ASIO_SDK</Filter>
+      <Filter>APP\ASIO_SDK</Filter>
     </ClCompile>
     <ClCompile Include="app_wrapper\app_dialog.cpp">
-      <Filter>app</Filter>
+      <Filter>APP</Filter>
     </ClCompile>
     <ClCompile Include="app_wrapper\app_main.cpp">
-      <Filter>app</Filter>
+      <Filter>APP</Filter>
     </ClCompile>
     <ClCompile Include="IPlugEffect.cpp" />
-    <ClCompile Include="..\..\IPlug\IPlugStandalone.cpp">
-      <Filter>app</Filter>
+    <ClCompile Include="..\..\IPlug\Hosts.cpp">
+      <Filter>IPlug</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\IPlug\IParam.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugBase.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugStructs.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\Log.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugStandalone.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControl.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLice.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPopupMenu.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\IPlugEffect.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\IPlug\README.md">
+      <Filter>IPlug</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IPlugEffect.rc" />
