update travis config for gh pages build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,36 @@
-language: C++
+# This will run on Travis' 'new' container-based infrastructure
+sudo: false
+
+# Blacklist
+branches:
+  only:
+    - iplugquake
+
+# Environment variables
+env:
+  global:
+    - GH_REPO_REF: https://github.com/olilarkin/wdl-ol.git
+    
+# Install dependencies
+addons:
+  apt:
+    packages:
+      - doxygen
+      - doxygen-doc
+      - doxygen-latex
+      - doxygen-gui
+      - graphviz
+
+# Build your code e.g. by calling make
+script:
+  - cd Documentation
+  - doxygen
+
+# Deploy using travis builtin GitHub Pages support
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: $TRAVIS_BUILD_DIR/Documentation/html
+  github_token: $GITHUB_API_KEY
+  on:
+    branch: master
