--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ addons:
     packages:
       - doxygen
       - doxygen-doc
-      - doxygen-latex
       - doxygen-gui
       - graphviz
 
@@ -30,7 +29,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  local_dir: $TRAVIS_BUILD_DIR
+  local_dir: $TRAVIS_BUILD_DIR/html
   github_token: $GITHUB_API_KEY
   on:
     branch: iplugquake
