try for just html

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
+  local_dir: html
   github_token: $GITHUB_API_KEY
   on:
     branch: iplugquake
