--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
 # Build your code e.g. by calling make
 script:
   - cd Documentation
-  - doxygen
+  - doxygen Doxyfile
 
 # Deploy using travis builtin GitHub Pages support
 deploy:
