--- a/IPlugExamples/IPlugEffect/IPlugEffect-aax.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/IPlugEffect-aax.vcxproj.filters
@@ -1,33 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="IPlug">
-      <UniqueIdentifier>{ed0eb9dd-b586-4a3f-98af-ebd9c084fff2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="IPlug\AAX">
-      <UniqueIdentifier>{a484aa50-ad02-4746-957e-117c8bb5c192}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Libs">
       <UniqueIdentifier>{57d1624e-a679-47da-bd3e-9609f02fdd7b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="IPlug">
+      <UniqueIdentifier>{8dc7a8e3-4de6-4250-8ae0-dc34e3372af4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IPlug\AAX">
+      <UniqueIdentifier>{7bfe5fd1-6d75-47df-a571-1e58e26b8784}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IPlug\IGraphics">
+      <UniqueIdentifier>{b92e7f5b-af76-4502-aa68-79036d1476bc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IPlugEffect.cpp" />
+    <ClCompile Include="..\..\AAX_SDK\Interfaces\AAX_Exports.cpp">
+      <Filter>Libs</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\IPlug\Hosts.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\IPlug\IBitmapMonoText.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\IPlug\IControl.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\IPlug\IGraphics.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\IPlug\IGraphicsWin.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\IPlug\IParam.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugAAX.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
     <ClCompile Include="..\..\IPlug\IPlugBase.cpp">
@@ -36,46 +34,42 @@
     <ClCompile Include="..\..\IPlug\IPlugStructs.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\IPlug\IPopupMenu.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\IPlug\Log.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
     <ClCompile Include="..\..\IPlug\AAX\AAX_CIPlugParameters.cpp">
       <Filter>IPlug\AAX</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\IPlug\IPlugAAX.cpp">
-      <Filter>IPlug\AAX</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\IPlug\AAX\IPlugAAX_Describe.cpp">
       <Filter>IPlug\AAX</Filter>
     </ClCompile>
-    <ClCompile Include="IPlugEffect.cpp" />
-    <ClCompile Include="..\..\AAX_SDK\Interfaces\AAX_Exports.cpp">
-      <Filter>Libs</Filter>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControl.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLice.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPopupMenu.cpp">
+      <Filter>IPlug\IGraphics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\IPlug\Containers.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
+    <ClInclude Include="IPlugEffect.h" />
+    <ClInclude Include="config.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="..\..\IPlug\Hosts.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\IPlug\IBitmapMonoText.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\IPlug\IControl.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\IPlug\IGraphics.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\IPlug\IGraphicsWin.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\IPlug\IKeyboardControl.h">
       <Filter>IPlug</Filter>
     </ClInclude>
     <ClInclude Include="..\..\IPlug\IMidiQueue.h">
@@ -90,7 +84,16 @@
     <ClInclude Include="..\..\IPlug\IPlug_include_in_plug_src.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugAAX.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\IPlug\IPlugBase.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugByteChunk.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugConstants.h">
       <Filter>IPlug</Filter>
     </ClInclude>
     <ClInclude Include="..\..\IPlug\IPlugOSDetect.h">
@@ -99,20 +102,63 @@
     <ClInclude Include="..\..\IPlug\IPlugStructs.h">
       <Filter>IPlug</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\IPlug\IPopupMenu.h">
+    <ClInclude Include="..\..\IPlug\IPlugUtilities.h">
       <Filter>IPlug</Filter>
     </ClInclude>
     <ClInclude Include="..\..\IPlug\Log.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\IPlug\NChanDelay.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\IPlug\AAX\AAX_CIPlugParameters.h">
       <Filter>IPlug\AAX</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\IPlug\IPlugAAX.h">
+    <ClInclude Include="..\..\IPlug\AAX\AAX_CIPlugTaperDelegate.h">
       <Filter>IPlug\AAX</Filter>
     </ClInclude>
-    <ClInclude Include="IPlugEffect.h" />
-    <ClInclude Include="config.h" />
+    <ClInclude Include="..\..\IPlug\AAX\IPlugAAX_view_interface.h">
+      <Filter>IPlug\AAX</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IAutoGUI.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControls.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLice.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsUtilites.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsView.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsWin.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IKeyboardControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPopupMenu.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IPlugEffect.rc" />
@@ -130,5 +176,10 @@
     <Library Include="..\..\AAX_SDK\Libs\Release\AAXLibrary_x64.lib">
       <Filter>Libs</Filter>
     </Library>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\IPlug\IPlug_Prefix.pch">
+      <Filter>IPlug</Filter>
+    </None>
   </ItemGroup>
 </Project>
