--- a/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-vst2.vcxproj
+++ b/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-vst2.vcxproj
@@ -31,6 +31,8 @@
     <ProjectGuid>{2EB4846A-93E0-43A0-821E-12237105168F}</ProjectGuid>
     <RootNamespace>IPlugEffectCairo</RootNamespace>
     <ProjectName>IPlugEffectCairo-vst2</ProjectName>
+    <VcpkgTriplet Condition="'$(Platform)'=='Win32'">x86-windows-static</VcpkgTriplet>
+    <VcpkgTriplet Condition="'$(Platform)'=='x64'">x64-windows-static</VcpkgTriplet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
