--- a/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo.props
+++ b/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo.props
@@ -10,6 +10,8 @@
   <PropertyGroup>
     <TargetName>$(BINARY_NAME)</TargetName>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
+    <VcpkgTriplet Condition="'$(Platform)'=='Win32'">x86-windows-static</VcpkgTriplet>
+    <VcpkgTriplet Condition="'$(Platform)'=='x64'">x64-windows-static</VcpkgTriplet>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
