update some schemez

--- a/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/AU.xcscheme
+++ b/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/AU.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -47,7 +47,7 @@
       <PathRunnable
          runnableDebuggingMode = "0"
          BundleIdentifier = "com.apple.audio.aulab"
-         FilePath = "/Applications/Developer/AU Lab.app">
+         FilePath = "/Applications/AU Lab.app">
       </PathRunnable>
       <MacroExpansion>
          <BuildableReference
@@ -61,7 +61,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-v aufx Ipef Acme"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
