--- a/IPlugExamples/IPlugEffect/IPlugEffect-app.vcxproj
+++ b/IPlugExamples/IPlugEffect/IPlugEffect-app.vcxproj
@@ -280,6 +280,7 @@
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLice.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsUtilites.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsWin.h" />
@@ -316,6 +317,7 @@
     <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLice.cpp" />
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IPopupMenu.cpp" />
