--- a/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-app.vcxproj.filters
+++ b/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-app.vcxproj.filters
@@ -10,6 +10,15 @@
     <Filter Include="app\ASIO_SDK">
       <UniqueIdentifier>{b91b9db4-5584-4959-a395-7394ba3cf5a3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="IPlug">
+      <UniqueIdentifier>{2e88c138-4d32-412c-9626-d616604bd2ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IPlug\IGraphics">
+      <UniqueIdentifier>{ffa85343-d4c8-4d51-bbef-2712945f0af4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IPlug\IGraphics\NanoSVG">
+      <UniqueIdentifier>{b90387e3-b918-4882-b24b-7f424affbec1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\IPlug\rtaudiomidi\RtAudio.h">
@@ -39,15 +48,99 @@
     <ClInclude Include="..\..\ASIO_SDK\asiolist.h">
       <Filter>app\ASIO_SDK</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="IPlugEffectCairo.h" />
+    <ClInclude Include="app_wrapper\app_resource.h" />
+    <ClInclude Include="..\..\IPlug\Hosts.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IMidiQueue.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IParam.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugBase.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugByteChunk.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugConstants.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugOSDetect.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IAutoGUI.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IControls.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsCairo.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsUtilites.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsWin.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IKeyboardControl.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IGraphics\IPopupMenu.h">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlug_include_in_plug_hdr.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlug_include_in_plug_src.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugStructs.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugUtilities.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\Log.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\NChanDelay.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\IPlug\IPlugStandalone.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
     <ClInclude Include="app_wrapper\app_main.h">
       <Filter>app</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h" />
-    <ClInclude Include="IPlugEffectCairo.h" />
-    <ClInclude Include="..\..\IPlug\IPlugStandalone.h">
-      <Filter>app</Filter>
+    <ClInclude Include="..\..\IPlug\IGraphics\NanoSVG\CairoNanoSVG.h">
+      <Filter>IPlug\IGraphics\NanoSVG</Filter>
     </ClInclude>
-    <ClInclude Include="app_wrapper\app_resource.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\NanoSVG\nanosvg.h">
+      <Filter>IPlug\IGraphics\NanoSVG</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\IPlug\rtaudiomidi\RtAudio.cpp">
@@ -65,18 +158,68 @@
     <ClCompile Include="..\..\ASIO_SDK\asiolist.cpp">
       <Filter>app\ASIO_SDK</Filter>
     </ClCompile>
+    <ClCompile Include="IPlugEffectCairo.cpp" />
+    <ClCompile Include="..\..\IPlug\Hosts.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IParam.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugBase.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugStructs.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\Log.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControl.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsCairo.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\IPopupMenu.cpp">
+      <Filter>IPlug\IGraphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IPlugStandalone.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
     <ClCompile Include="app_wrapper\app_dialog.cpp">
       <Filter>app</Filter>
     </ClCompile>
     <ClCompile Include="app_wrapper\app_main.cpp">
       <Filter>app</Filter>
     </ClCompile>
-    <ClCompile Include="IPlugEffectCairo.cpp" />
-    <ClCompile Include="..\..\IPlug\IPlugStandalone.cpp">
-      <Filter>app</Filter>
+    <ClCompile Include="..\..\IPlug\IGraphics\NanoSVG\CairoNanoSVG.cpp">
+      <Filter>IPlug\IGraphics\NanoSVG</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\IPlug\IGraphics\NanoSVG\NanoSVG_Impl.c">
+      <Filter>IPlug\IGraphics\NanoSVG</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IPlugEffectCairo.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\IPlug\IPlug_Prefix.pch">
+      <Filter>IPlug</Filter>
+    </None>
   </ItemGroup>
 </Project>
