--- a/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-vst2.vcxproj
+++ b/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-vst2.vcxproj
@@ -254,6 +254,7 @@
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsCairo.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsNanoVG.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsUtilites.h" />
@@ -261,6 +262,8 @@
     <ClInclude Include="..\..\IPlug\IGraphics\IKeyboardControl.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IPopupMenu.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\NanoSVG\CairoNanoSVG.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\NanoSVG\nanosvg.h" />
     <ClInclude Include="..\..\IPlug\IMidiQueue.h" />
     <ClInclude Include="..\..\IPlug\IParam.h" />
     <ClInclude Include="..\..\IPlug\IPlugBase.h" />
@@ -285,9 +288,12 @@
     <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsCairo.cpp" />
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IPopupMenu.cpp" />
+    <ClCompile Include="..\..\IPlug\IGraphics\NanoSVG\CairoNanoSVG.cpp" />
+    <ClCompile Include="..\..\IPlug\IGraphics\NanoSVG\NanoSVG_Impl.c" />
     <ClCompile Include="..\..\IPlug\IParam.cpp" />
     <ClCompile Include="..\..\IPlug\IPlugBase.cpp" />
     <ClCompile Include="..\..\IPlug\IPlugStructs.cpp" />
