--- a/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-app.vcxproj
+++ b/IPlugExamples/IPlugEffectCairo/IPlugEffectCairo-app.vcxproj
@@ -277,6 +277,7 @@
     <ClInclude Include="..\..\IPlug\IGraphics\IControls.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphics.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsCairo.h" />
+    <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsCairoText.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsConstants.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.h" />
     <ClInclude Include="..\..\IPlug\IGraphics\IGraphicsStructs.h" />
@@ -317,6 +318,7 @@
     <ClCompile Include="..\..\IPlug\IGraphics\IControls.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphics.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsCairo.cpp" />
+    <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsCairoText.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsLiveEdit.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IGraphicsWin.cpp" />
     <ClCompile Include="..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp" />
