--- a/common.xcconfig
+++ b/common.xcconfig
@@ -35,6 +35,7 @@ APP_DEFS = SA_API __MACOSX_CORE__ $ALL_DEFS
 WDL_PATH = $(SRCROOT)/../../WDL
 IPLUG_PATH = $(SRCROOT)/../../IPlug
 IGRAPHICS_PATH = $(IPLUG_PATH)/IGraphics
+NANOSVG_PATH = $(IGRAPHICS_PATH)/NanoSVG
 SWELL_PATH = $(WDL_PATH)/swell
 LICE_PATH = $(WDL_PATH)/lice
 
