sort out complex IGraphics -I -L and -l options via common.xcconfig
Set these at project xcconfig level, to get include headers and link all possible IGraphics libs

ADDITIONAL_INCLUDES = $(GRAPHICS_PATHS)
ADDITIONAL_LIBRARY_PATHS = $(GRAPHICS_LINK_PATHS)
OTHER_LDFLAGS = $(GRAPHICS_LIBS_PATHS)

--- a/IPlugExamples/IPlugEffect/IPlugEffect.xcconfig
+++ b/IPlugExamples/IPlugEffect/IPlugEffect.xcconfig
@@ -6,8 +6,9 @@
 // the basename of the vst, vst3, app, component, aaxplugin
 BINARY_NAME = IPlugEffect
 
-ADDITIONAL_INCLUDES = $(IGRAPHICS_PATH) $(LICE_PATH) $(NANOSVG_PATH)
-//ADDITIONAL_LIBRARY_PATHS = //
+ADDITIONAL_INCLUDES = $(GRAPHICS_PATHS)
+ADDITIONAL_LIBRARY_PATHS = $(GRAPHICS_LINK_PATHS)
+OTHER_LDFLAGS = $(GRAPHICS_LIBS_PATHS)
 
 // for jack headers
 //ADDITIONAL_APP_INCLUDES = /usr/local/include
